[package]
name = "kersd"
description = "Kyberswap Exchange Rate Scraper Daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"

